⛴🏢 Checkpoint ./index.html:5235500/26:5235506/821

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <h1>Hi there!</h1>
-    
-    <p>
-    </p>
-
-  
+    <center><h1>Placeholder Title</h1></center>
+<button class = "btn">Hot Topic Information </button>
+    <button class = "btn">
+      2020 Candiates and their Views</button>
+    <button class = 
+    </button>
   </body>
 </html>
