--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <center><h1>Placeholder Title</h1></center>
 <button class = "btn">Hot Topic Information </button>
-    <button class = "btn">
-      2020 Candiates and their Views</button>
-    <button class = 
-    </button>
+<button class = "btn">2020 Candidates and their Views</button>
+<button class = "btn">What Canidate do you align with?</button>
+
+
   </body>
 </html>
