🎮👔 Checkpoint ./index.html:5235500/526 ./style.css:5235500/372

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 <button class = "btn">2020 Candidates and their Views</button>
 <button class = "btn">What Canidate do you align with?</button>
 
-
+<div class= "mission"
+  <h2 class="mission"> Mission
+  </h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+    Cras non egestas turpis. Aliquam at sodales dui, at aliquet ex. 
+    Suspendisse potenti. Praesent luctus lectus sit amet lacus pretium semper. 
+    Mauris a ipsum faucibus, aliquam mauris et, aliquam libero. 
+    Ut blandit purus et neque dignissim auctor id et felis. 
+    Phasellus sapien dui, lacinia sed molestie a, egestas in nisi.
+  </p>
+    </div>
   </body>
 </html>
