--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <title>Hello!</title>
+    <title>Final Project</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,10 +16,21 @@
   </head>  
   <body>
     <center><h1>Placeholder Title</h1></center>
-<button class = "btn">Hot Topic Information </button>
+    <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">Hot Topis and Information</a>
+  <a href="#contact">2020 Candidates and their Views</a>
+  <a href="#about">About</a>
+</div>
+
+<div style="padding-left:16px">
+  <h2>Top Navigation Example</h2>
+  <p>Some content..</p>
+</div>
+<!-- <button class = "btn">Hot Topic Information </button>
 <button class = "btn">2020 Candidates and their Views</button>
 <button class = "btn">What Canidate do you align with?</button>
-
+ -->
 <div class= "mission"
   <h2 class="mission"> Mission
   </h2>
