--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+<link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>Final Project</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
   <a class="active" href="#home">Home</a>
   <a href="#news">Hot Topis and Information</a>
   <a href="#contact">2020 Candidates and their Views</a>
-  <a href="#about">About</a>
+  <a href="#about">About Us!</a>
 </div>
 
 <div style="padding-left:16px">
