🌈🌉 Checkpoint ./script.js:5235500/251 ./index.html:5235500/52:5235506/29

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <center><h1>Placeholder Title</h1></center>
     <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#news">Hot Topis and Information</a>
-  <a href="#contact">2020 Candidates and their Views</a>
-  <a href="#about">About Us!</a>
+  <a class="topnav" id="#news">Hot Topis and Information </a>
+  <a id="contact">2020 Candidates and their Views</a>
+
 </div>
 
 <div style="padding-left:16px">
