🏅🎢 Checkpoint ./index.html:5235506/72 ./topics.html:5235506/1255 ./candidates.html:5235506/263

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-    <title>Final Project</title>
+    <title>Final Project KWK</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,9 +17,9 @@
   <body>
     <center><h1>Placeholder Title</h1></center>
     <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a class="topnav" id="#news">Hot Topis and Information </a>
-  <a id="contact">2020 Candidates and their Views</a>
+  <a class="active" href="index.html">Home</a>
+  <a class="topnav" href="topics.html">Hot Topics and Information </a>
+  <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 
 </div>
 
