--- a/candidates.html
+++ b/candidates.html
@@ -16,7 +16,7 @@
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
 <section id = "joeBiden">
-Joe Biden 
+<h2>Joe Biden</h2>
 </section>
 <script src="/script.js" defer></script>
   </body>
