--- a/candidates.html
+++ b/candidates.html
@@ -17,6 +17,17 @@
 </div>
 <section id = "joeBiden">
 <h2>Joe Biden</h2>
+<p>
+Joe Biden supports the Pathway to Citezenship, and he wants there to be an easy and clear path to <br>citezenship for poeple seeking asylum and Dreamers.
+and it is unclear is he wants to abolish or reform ICE.
+He opposes a border wall but supports investments in border technology, and promises to stop the deportion of Veterans. <br>
+He wants to ban assault weapons, and supports univesal background checks for gun owners. 
+<ul>Stats
+  <li>Former VP under Obama for 8 years</li>
+  <li>Has large support from older voters</li>
+  <li>Highest poller so far with 28%</li>
+  </ul>
+</p>
 </section>
 <script src="/script.js" defer></script>
   </body>
