👽👱 Checkpoint ./candidates.html:5235506/365:5235636/62 ./index.html:5235636/75 ./style.css:5235636/20

--- a/candidates.html
+++ b/candidates.html
@@ -22,12 +22,17 @@ Joe Biden supports the Pathway to Citezenship, and he wants there to be an easy 
 and it is unclear is he wants to abolish or reform ICE.
 He opposes a border wall but supports investments in border technology, and promises to stop the deportion of Veterans. <br>
 He wants to ban assault weapons, and supports univesal background checks for gun owners. 
+  He supports the plans for free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
 <ul>Stats
   <li>Former VP under Obama for 8 years</li>
   <li>Has large support from older voters</li>
   <li>Highest poller so far with 28%</li>
   </ul>
-</p>
+</section>
+<section id = "elizabethwarren">
+<h2>Elizabeth Warren</h2>
+    
+    
 </section>
 <script src="/script.js" defer></script>
   </body>
