--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <center><h1>Placeholder Title</h1></center>
+    <center><h1>The Candidate Crew</h1></center>
     <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a class="topnav" href="topics.html">Hot Topics and Information </a>
