🍍👟 Checkpoint ./candidates.html:5235506/454 ./style.css:5235636/534

--- a/candidates.html
+++ b/candidates.html
@@ -23,7 +23,7 @@ and it is unclear is he wants to abolish or reform ICE.
 He opposes a border wall but supports investments in border technology, and promises to stop the deportion of Veterans. <br>
 He wants to ban assault weapons, and supports univesal background checks for gun owners. 
   He supports the plans for free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
-<ul>Stats
+<ul>Quick Facts
   <li>Former VP under Obama for 8 years</li>
   <li>Has large support from older voters</li>
   <li>Highest poller so far with 28%</li>
@@ -31,7 +31,15 @@ He wants to ban assault weapons, and supports univesal background checks for gun
 </section>
 <section id = "elizabethwarren">
 <h2>Elizabeth Warren</h2>
+  <p>
+    Elizabeth Warren supports the Pathway to Citezenship, and Citezenship for Dreamers, under DACA. She also opposes any additional border funding for the wall.<br>
     
+  </p>
+<ul>Quick Facts
+<li>Seneator from Massechuets for 6 years</li>
+  <li>Polling with 6%</li>
+  <li>Supports legalized Marajuana</li>
+</ul>
     
 </section>
 <script src="/script.js" defer></script>
