👟🎗 Checkpoint ./style.css:5235636/146 ./candidates.html:5235506/721 ./index.html:5235636/8

--- a/candidates.html
+++ b/candidates.html
@@ -31,16 +31,18 @@ He wants to ban assault weapons, and supports univesal background checks for gun
 </section>
 <section id = "elizabethwarren">
 <h2>Elizabeth Warren</h2>
-  <p>
-    Elizabeth Warren supports the Pathway to Citezenship, and Citezenship for Dreamers, under DACA. She also opposes any additional border funding for the wall.<br>
-    
-  </p>
+<p>
+Elizabeth Warren supports the Pathway to Citezenship, and Citezenship for Dreamers, under DACA. She also opposes any additional border funding for the wall.<br>
+She is a big supporter of Universal Education and has introduced a plan to Congress for College Debt Releif, but not a complete wipe-out of debt. Some fellow <br>
+Democrats, such as Bernie Sanders have proposed for a complete wipe-out of all student debt. She has suggested implementing a "Wealth Tax" for millionaries.<br>
+This tax would be used to fund free or lowcost childcare. </p>
 <ul>Quick Facts
 <li>Seneator from Massechuets for 6 years</li>
-  <li>Polling with 6%</li>
-  <li>Supports legalized Marajuana</li>
+<li>Polling with 6%</li>
+<li>Supports legalized Marajuana</li>
 </ul>
-    
+</section>
+<section>
 </section>
 <script src="/script.js" defer></script>
   </body>
