💵🍋 Checkpoint ./index.html:5235636/144 ./candidates.html:5235636/193 ./topics.html:5235636/193

--- a/candidates.html
+++ b/candidates.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/style.css">
 
     <meta charset="UTF-8">
