--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <center><h1>The Candidate Crew</h1></center>
     <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a class="topnav" href="topics.html">Hot Topics and Information </a>
+  <a class="active" style="margin-left: 250px;" href="index.html">Home</a>
+  <a class="topnav" style="margin-left: 8px;" href="topics.html">Hot Topics and Information </a>
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
 
