🎄👻 Checkpoint ./candidates.html:5235506/195

--- a/candidates.html
+++ b/candidates.html
@@ -43,7 +43,11 @@ This tax would be used to fund free or lowcost childcare. </p>
 <li>Supports legalized Marajuana</li>
 </ul>
 </section>
-<section>
+<section id = "kamalaHarris">
+<h2>Kamala Harris</h2>
+<p>
+Kamala Harris, like all Democratic Canidates, supports the Pathway to Citezenship 
+</p>
 </section>
 <script src="/script.js" defer></script>
   </body>
