--- a/candidates.html
+++ b/candidates.html
@@ -46,7 +46,7 @@ This tax would be used to fund free or lowcost childcare. </p>
 <section id = "kamalaHarris">
 <h2>Kamala Harris</h2>
 <p>
-Kamala Harris, like all Democratic Canidates, supports the Pathway to Citezenship 
+Kamala Harris, like all Democratic Canidates, supports the Pathway to Citezenship but she is the only candidate 
 </p>
 </section>
 <script src="/script.js" defer></script>
