--- a/candidates.html
+++ b/candidates.html
@@ -10,10 +10,10 @@
     <title>Final Project KWK</title>
   </head>
   <body>
-<center><h1>Placeholder Title</h1></center>
+<center><h1>The Candidate Crew</h1></center>
 <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a class="topnav" href="topics.html">Hot Topics and Information </a>
+  <a class="active" style="margin-left: 250px;" href="index.html">Home</a>
+  <a class="topnav" style="margin-left: 8px;" href="topics.html">Hot Topics and Information </a>
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
 <section id = "joeBiden">
@@ -46,8 +46,17 @@ This tax would be used to fund free or lowcost childcare. </p>
 <section id = "kamalaHarris">
 <h2>Kamala Harris</h2>
 <p>
-Kamala Harris, like all Democratic Canidates, supports the Pathway to Citezenship but she is the only candidate 
+Kamala Harris, like all Democratic Canidates, supports the Pathway to Citezenship but she is the only candidate that has promised for it to happen through an <br>
+executive order. She says that with DACA she would take away age restrictions, and implant protections that help Dreamers apply for green cards, and Citezenship. <br>
+However these apply to the 2 million Dreamers, not the 11 million undocumented immigrants. She supports the Universal College plan and would implemint tuition-free College <br>
+for anyone whose family makes less than $125,00. She support a universal Pre-K program as well. On the topic of Gun Control she supports banning assault weapons and the sale<br>
+of high-capacity magazines, which are guns that can fire 10 or more rounds without reloading. When she was the AG of California she supported that block some adevertising by gun stores.
 </p>
+<ul>
+<li>She was the Attorney General of California before becoming a Senator</li>
+<li>She supports a Green New Deal and legalizing Marajuana</li>
+<li>She is polling at 8%</li>
+</ul>
 </section>
 <script src="/script.js" defer></script>
   </body>
