🍽😚 Checkpoint ./topics.html:5235506/14 ./style.css:5235636/11 ./candidates.html:5235506/201

--- a/candidates.html
+++ b/candidates.html
@@ -23,12 +23,12 @@ Joe Biden supports the Pathway to Citezenship, and he wants there to be an easy 
 and it is unclear is he wants to abolish or reform ICE.
 He opposes a border wall but supports investments in border technology, and promises to stop the deportion of Veterans. <br>
 He wants to ban assault weapons, and supports univesal background checks for gun owners. 
-  He supports the plans for free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
+He supports the plans for free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
 <ul>Quick Facts
-  <li>Former VP under Obama for 8 years</li>
-  <li>Has large support from older voters</li>
-  <li>Highest poller so far with 28%</li>
-  </ul>
+<li>Former VP under Obama for 8 years</li>
+<li>Has large support from older voters</li>
+<li>Highest poller so far with 28%</li>
+</ul>
 </section>
 <section id = "elizabethwarren">
 <h2>Elizabeth Warren</h2>
@@ -55,7 +55,16 @@ of high-capacity magazines, which are guns that can fire 10 or more rounds witho
 <ul>
 <li>She was the Attorney General of California before becoming a Senator</li>
 <li>She supports a Green New Deal and legalizing Marajuana</li>
-<li>She is polling at 8%</li>
+<li>She is polling at 8%, the 3rd highest Democratic Poller</li>
+</ul>
+</section>
+<section>
+  <h2>Pett Buttigeg</h2>
+<p>
+    
+</p>
+<ul>
+    
 </ul>
 </section>
 <script src="/script.js" defer></script>
