--- a/topics.html
+++ b/topics.html
@@ -10,7 +10,7 @@
     <title>Final Project KWK</title>
   </head>
   <body>
-<center><h1>Placeholder Title</h1></center>
+<center><h1>The Candidate Crew</h1></center>
 <div class="topnav">
   <a class="active" style="margin-left: 250px;" href="index.html">Home</a>
   <a class="topnav" style="margin-left: 8px;" href="topics.html">Hot Topics and Information </a>
