🏅🚡 Checkpoint ./index.html:5235506/415:5235636/18 ./style.css:5235506/317:5235636/28

--- a/candidates.html
+++ b/candidates.html
@@ -16,7 +16,9 @@
   <a class="topnav" style="margin-left: 8px;" href="topics.html">Hot Topics and Information </a>
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
-<section id = "joeBiden">
+<div class = "bios"><center>
+  
+<section  class = "person"id = "joeBiden">
 <h2>Joe Biden</h2>
 <p>
 Joe Biden supports the Pathway to Citezenship, and he wants there to be an easy and clear path to <br>citezenship for poeple seeking asylum and Dreamers.
@@ -24,13 +26,13 @@ and it is unclear is he wants to abolish or reform ICE.
 He opposes a border wall but supports investments in border technology, and promises to stop the deportion of Veterans. <br>
 He wants to ban assault weapons, and supports univesal background checks for gun owners. 
 He supports the plans for free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
-<ul>Quick Facts
+<ul class = "list">Quick Facts
 <li>Former VP under Obama for 8 years</li>
 <li>Has large support from older voters</li>
 <li>Highest poller so far with 28%</li>
 </ul>
 </section>
-<section id = "elizabethwarren">
+<section class = "person" id = "elizabethwarren">
 <h2>Elizabeth Warren</h2>
 <p>
 Elizabeth Warren supports the Pathway to Citezenship, and Citezenship for Dreamers, under DACA. She also opposes any additional border funding for the wall.<br>
@@ -43,7 +45,7 @@ This tax would be used to fund free or lowcost childcare. </p>
 <li>Supports legalized Marajuana</li>
 </ul>
 </section>
-<section id = "kamalaHarris">
+<section class = "person" id = "kamalaHarris">
 <h2>Kamala Harris</h2>
 <p>
 Kamala Harris, like all Democratic Canidates, supports the Pathway to Citezenship but she is the only candidate that has promised for it to happen through an <br>
@@ -52,21 +54,71 @@ However these apply to the 2 million Dreamers, not the 11 million undocumented i
 for anyone whose family makes less than $125,00. She support a universal Pre-K program as well. On the topic of Gun Control she supports banning assault weapons and the sale<br>
 of high-capacity magazines, which are guns that can fire 10 or more rounds without reloading. When she was the AG of California she supported that block some adevertising by gun stores.
 </p>
-<ul>
+<ul class = "list">
 <li>She was the Attorney General of California before becoming a Senator</li>
 <li>She supports a Green New Deal and legalizing Marajuana</li>
 <li>She is polling at 8%, the 3rd highest Democratic Poller</li>
 </ul>
 </section>
-<section>
-  <h2>Pett Buttigeg</h2>
+<section class = "person" id = "peteBooty">
+  <h2>Pete Buttigeg</h2>
 <p>
-    
+Pete Buttigeg, supports the Pathway to Citezenship, and supports a path for Undocummented Immigrants, who work, pay taxes and help grow our economy. He is a memeber of the "Mayors against<br>
+Illegal Guns". He supports Universal Background Checks and banning guns in schools. Unlike other candidates he has not spoken on banning assault weapons. He has not spoken in support of <br>
+other candidates debt relif plans, but does agree that college is expensive "for many" and supports the expansion of the Public Service Loan Forgivness program, which relives some college<br>
+debt, in exchange for public service. One of his other strong positions is he is in favor of abololishing the Electoral College. 
 </p>
-<ul>
-    
+<ul class = "list">Quick Facts
+<li>Mayor of South Bend Indiana since 2012</li>
+<li>Polling with 8%, tied with Kamala Harris</li>
+<li>Sturggles with support from African Americans,
+polling 0% in some areas.</li>
 </ul>
 </section>
+<section class = "person" id = "beto">
+<h2>Beto O'Rourke</h2>
+<p>
+Beto O'Rouke, has a strong stance on Immigration and supports the Pathway to Citezenship and the Dreamers Act. He also has spoken out against the border wall, private immigration detention<br>
+centers and the "militarization" of ICE. He has even stated that he is in favor of removing the wall in El Paso, his hometown, stating that it didn't lower crime rates and hasn't benefited<br>
+the area. Beto is also very strong on Gun Control, he was one of the Congressman to sit-in in the House after the 2016 Pulse Nightclub Shooting. He supports the ban of some semi-automatic<br>
+weapons, and supports some magazine size restrictions, and Universal Background Checks. He hasn't spoken on Education, or tution-free College, and Universal Day Care. 
+</p>
+<ul class = "list">Quick Facts
+<li>Former El Paso, Texas Congressman. He ran against Ted Cruz for the Texas Senate Seat, which gained National Attention.</li>
+<li>Polling at 4%</li>
+<li>Announced his launch in Vanity Fair</li>
+</ul>
+</section>
+<section class = "person" id = "castro">
+<h2>Julian Castro</h2>
+<p>
+Julian Castro, is a more unknow name in the election, but many people think he could pull ahead after the first Democratic Debate. He is a supporter of the Pathway to Citezenship and has<br>
+introduced plans for a pathway for illegal immigrants. He has introduced his plan to take away the section of the Immigration and Nationality Act that states that "illegal entry" is a crime.<br>
+Illegal Immigrants could still be deported, but would not be subject to criminal prosecution. He plans to remove the 287(g) agreements, these say that train cops may act as ICE agents and he<br>
+would remove the section of ICE that deals with arrests and deportations and reform the branch. He is a supporter of banning high-capacity magazines and requiring background checks. He has spoken<br>
+out against loopholes in the process that have allowed people such as Dylann Roof to buy guns before their background checks have been processed and cleared. One of his signiture policies is<br>
+Universal Pre-K programs around the US. 
+</p>
+<ul class = "list">
+<li>Youngest member of the Obama Cabinet, as Secretary of Housing and Urban Development</li>
+<li>He is a low poller, at just below 1%</li>
+<li>He has a twin brother who is a Congressman.</li>
+</ul>
+</section>
+  <section class = "person" id = "source">
+  <h2>
+    Sources for Information
+    </h2>
+  <ul class = "list">
+    <li>Main Ideas: </li>
+    <li><a href = "https://www.rollingstone.com/politics/politics-features/2020-democrat-candidates-771735/">Candidate Information</a> , <a href = "https://www.vox.com/policy-and-politics/2019/3/28/18285455/2020-presidential-election-polls-joe-biden-democratic-primary-candidates">Polling Number</a> , <a href = "https://news.vice.com/en_us/article/9kxv8e/do-any-of-the-2020-democrats-want-to-abolish-ice-we-broke-down-their-immigration-plans
+  ">Immigration Plans</a></li>
+<li>Candidate Specifices:</li>
+  <li><a href = "https://www.pbs.org/newshour/politics/what-does-joe-biden-believe-where-the-candidate-stands-on-8-issues">Joe Biden</a> , <a href = "https://www.politico.com/2020-election/candidates-views-on-the-issues/elizabeth-warren/">Elizabeth Warren</a> , <a href = "https://www.pbs.org/newshour/politics/what-does-kamala-harris-believe-where-the-candidate-stands-on-9-issues">Kamala Harris</a> , <a href = "https://www.elle.com/culture/movies-tv/a27073125/julian-castro-presidential-election-2020-issues/">Julian Castro</a> , <a href = "https://www.axios.com/pete-buttigieg-2020-presidential-election-factsheet-indiana-mayor-020c5afc-c8a2-4691-940c-b271e63306b1.html">Pete Buttigeg</a></li>
+    </ul>
+  </section>
+  </center>
+  </div>
 <script src="/script.js" defer></script>
   </body>
 </html>
