--- a/topics.html
+++ b/topics.html
@@ -17,7 +17,7 @@
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
 <section id = "immigration">
-  <h2 id "immigrationTitle">Immigration</h2>   
+  <h2 id = "immigrationTitle">Immigration</h2>   
   <p>
     Immigration 
   </p>
