🎓👴 Checkpoint ./style.css:5235506/71:5235636/290 ./index.html:5235506/131 ./candidates.html:5235506/21

--- a/candidates.html
+++ b/candidates.html
@@ -39,7 +39,7 @@ Elizabeth Warren supports the Pathway to Citezenship, and Citezenship for Dreame
 She is a big supporter of Universal Education and has introduced a plan to Congress for College Debt Releif, but not a complete wipe-out of debt. Some fellow <br>
 Democrats, such as Bernie Sanders have proposed for a complete wipe-out of all student debt. She has suggested implementing a "Wealth Tax" for millionaries.<br>
 This tax would be used to fund free or lowcost childcare. </p>
-<ul>Quick Facts
+<ul class = "list">Quick Facts
 <li>Seneator from Massechuets for 6 years</li>
 <li>Polling with 6%</li>
 <li>Supports legalized Marajuana</li>
