🦄🛳 Checkpoint ./index.html:5235636/164 ./.glitch-assets:5235636/387 ./style.css:5235636/70

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
        <h2 id="aTitle"> About Us! </h2> 
         <h4>
           We are Madeleine, Misheal, and Ximena. We made this website for our final project at the Dallas WebDev Kode with Klossy Camp. Kode with Klossy is an all girls, 2 week coding camp put on by Karlie Kloss. 
+          <img id="scarymisheal"src=https://cdn.glitch.com/22736788-7b85-4ab8-b05c-b6662ab2abae%2Fabout%20us.jpg?v=1561656313528>
         </h4>
       </section>
        <div class="pageBrk">
