--- a/topics.html
+++ b/topics.html
@@ -21,11 +21,10 @@
   <p>
     Immigration 
   </p>
-  <p>
-    
-Over the last four years, the Trump administration has implemented a number of punitive policies intended to curb immigration, but asylum seekers are still flocking to the U.S. in near-record numbers. They’re fleeing poverty and violence, only to find themselves packed into detention centers, sometimes without their children.
+  <p>    
+Over the last three years, the Trump administration has implemented a number of punitive policies intended to curb immigration, but asylum seekers are still flocking to the U.S. in near-record numbers. They’re fleeing poverty and violence, only to find themselves packed into detention centers, sometimes without their children.
 At the same time, the estimated 11 million undocumented immigrants living in the U.S. live under threat of mass deportations.
-Every contender for the 2020 Democratic nomination has come out against Trump’s hard-line immigration policies to some degree, and not a single one supports family separation, wants to restrict asylum protections, or has called for more deportations.
+Every contender for the 2020 Democratic nomination has come out against Trump’s hard-line immigration policies to some degree, and not a single one supports family separation, wants to restrict asylum protections, or has called for more deportations. Most of the Immigrants entering the US 
 
   </p>
              
