👢🌕 Checkpoint ./index.html:5235500/10:5235506/84 ./style.css:5235636/265 ./topics.html:5235500/156:5235506/643 ./topics.css:5235500/655

--- a/topics.html
+++ b/topics.html
@@ -16,20 +16,24 @@
   <a class="topnav" style="margin-left: 8px;" href="topics.html">Hot Topics and Information </a>
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
-<section id = "immigration">
+    <div class="immi"
+<section id = "immigration"
   <h2 id = "immigrationTitle">Immigration</h2>   
   <p>
     Immigration 
   </p>
   <p>    
-Over the last three years, the Trump administration has implemented a number of punitive policies intended to curb immigration, but asylum seekers are still flocking to the U.S. in near-record numbers. They’re fleeing poverty and violence, only to find themselves packed into detention centers, sometimes without their children.
-At the same time, the estimated 11 million undocumented immigrants living in the U.S. live under threat of mass deportations.
-Every contender for the 2020 Democratic nomination has come out against Trump’s hard-line immigration policies to some degree, and not a single one supports family separation, wants to restrict asylum protections, or has called for more deportations. Most of the Immigrants entering the US 
-
+      Over the last three years, the Trump administration has implemented a number of punitive policies intended to curb immigration, but asylum seekers are still flocking to the U.S. in near-record numbers. They’re fleeing poverty and violence, only to find themselves packed into detention centers, sometimes without their children.
+      At the same time, the estimated 11 million undocumented immigrants living in the U.S. live under threat of mass deportations.
+      Every contender for the 2020 Democratic nomination has come out against Trump’s hard-line immigration policies to some degree, and not a single one supports family separation, wants to restrict asylum protections, or has called for more deportations. Most of the Immigrants entering the US are from Central and South America. 
+      The Detention Centers in border states have been discovered to have inhumane condition, even to the point as children are not given soap or blankets. Immigration is a main topic in the 2020 election, with the increase of immigrants and will definelty plan a big roll in polcies announcments. 
   </p>
+    <img src = "http://infographic.statista.com/normal/chartoftheday_17289_number_of_undocumented_immigrants_apprehended_families_n.jpg">
+    </section>
+    </div>
              
              
-</section>
+
 <script src="/script.js" defer></script>
   </body>
 </html>
