💗📇 Checkpoint ./topics.html:5235500/34:5235506/128 ./style.css:5235500/122:5235506/19:5235636/551 ./topics.css:5235500/100 ./quiz.html:5235500/63 ./index.html:5235500/10

--- a/quiz.html
+++ b/quiz.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/quiz.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="/scripts.js" defer></script>
+    <script src="/quiz.js" defer></script>
   </head>  
   <body>
      <section class="quiz-section quiz-fullscreen section section-dark" id="quiz">
