--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a class="active" style="margin-left: 250px;" href="index.html">Home</a>
       <a class="topnav" style="margin-left: 8px;" href="topics.html">Hot Topics and Information </a>
       <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
-      <a class="" style="margin-left: 18px;" href="indexs.html">Presidential Quiz</a>
+      <a class="" style="margin-left: 18px;" href="quiz.html">Presidential Quiz</a>
     </div>
 
     <div style="padding-left:16px">
