🍳🚟 Checkpoint ./topics.html:5235500/11 ./style.css:5235500/314:5235506/24:5235636/110

--- a/topics.html
+++ b/topics.html
@@ -16,7 +16,7 @@
   <a class="topnav" style="margin-left: 8px;" href="topics.html">Hot Topics and Information </a>
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
-    <div class="immi"
+    <div class="mission"
 <section id = "immigration">
   <h2 id = "immigrationTitle">Immigration</h2>   
   <p>
