🛎🦄 Checkpoint ./quiz.html:5235500/4:5235506/297 ./topics.html:5235500/743:5235506/40 ./style.css:5235500/69:5235506/73:5235636/87

--- a/topics.html
+++ b/topics.html
@@ -17,7 +17,7 @@
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
     <div class="mission"
-<section id = "immigration">
+<section> 
   <h2 id = "immigrationTitle">Immigration</h2>   
   <p>
     Immigration 
@@ -30,10 +30,16 @@
       </p>
     <img id="chart" src = "http://infographic.statista.com/normal/chartoftheday_17289_number_of_undocumented_immigrants_apprehended_families_n.jpg">
     </section>
-  <section>
+  <section class="gunControl">
   <h2 id = "guns">Gun Control</h2>
   <p>
-    
+    Nulla eu mollis lacus. Etiam elementum nisl eros, eu ullamcorper turpis tempor eget. Nulla facilisi. 
+    Nunc elementum rutrum sem vitae hendrerit. Duis sagittis tortor nec lorem volutpat, in congue leo sagittis.
+    Aenean ultrices dui tincidunt lorem tristique rutrum. Sed efficitur rutrum mollis. Duis ac efficitur nulla, 
+    at iaculis ipsum. Sed a libero non risus ullamcorper pellentesque eu sed lorem. Lorem ipsum dolor sit amet, 
+    consectetur adipiscing elit. Vivamus posuere metus eget sollicitudin elementum. Cras ornare at nibh vel laoreet. 
+    Sed nec eros id lectus mollis rutrum a ac sapien. Cras commodo ut enim ac pretium. Donec at ipsum a mauris congue commodo. 
+    Donec eu volutpat dolor.
     </p>
   
   
