🙅🐁 Checkpoint ./topics.html:5235506/21 ./style.css:5235500/81:5235506/329 ./candidates.html:5235506/86

--- a/candidates.html
+++ b/candidates.html
@@ -9,14 +9,14 @@
     <meta charset="UTF-8">
     <title>Final Project KWK</title>
   </head>
-  <body>
+  <body><center>
 <center><h1>The Candidate Crew</h1></center>
 <div class="topnav">
   <a class="active" style="margin-left: 250px;" href="index.html">Home</a>
   <a class="topnav" style="margin-left: 8px;" href="topics.html">Hot Topics and Information </a>
   <a id="contact" href ="candidates.html">2020 Candidates and their Views</a>
 </div>
-<div class = "bios"><center>
+<div class = "bios">
   
 <section  class = "person"id = "joeBiden">
 <h2>Joe Biden</h2>
@@ -26,7 +26,7 @@ and it is unclear is he wants to abolish or reform ICE.
 He opposes a border wall but supports investments in border technology, and promises to stop the deportion of Veterans. <br>
 He wants to ban assault weapons, and supports univesal background checks for gun owners. 
 He supports the plans for free public college, and universal Pre-K, and was one of the first Democrats to promote these ideas. </p>
-<ul class = "list">Quick Facts
+<ul class = "list">Quick Facts:
 <li>Former VP under Obama for 8 years</li>
 <li>Has large support from older voters</li>
 <li>Highest poller so far with 28%</li>
@@ -39,7 +39,7 @@ Elizabeth Warren supports the Pathway to Citezenship, and Citezenship for Dreame
 She is a big supporter of Universal Education and has introduced a plan to Congress for College Debt Releif, but not a complete wipe-out of debt. Some fellow <br>
 Democrats, such as Bernie Sanders have proposed for a complete wipe-out of all student debt. She has suggested implementing a "Wealth Tax" for millionaries.<br>
 This tax would be used to fund free or lowcost childcare. </p>
-<ul class = "list">Quick Facts
+<ul class = "list">Quick Facts:
 <li>Seneator from Massechuets for 6 years</li>
 <li>Polling with 6%</li>
 <li>Supports legalized Marajuana</li>
@@ -54,7 +54,7 @@ However these apply to the 2 million Dreamers, not the 11 million undocumented i
 for anyone whose family makes less than $125,00. She support a universal Pre-K program as well. On the topic of Gun Control she supports banning assault weapons and the sale<br>
 of high-capacity magazines, which are guns that can fire 10 or more rounds without reloading. When she was the AG of California she supported that block some adevertising by gun stores.
 </p>
-<ul class = "list">
+<ul class = "list">Quick Facts:
 <li>She was the Attorney General of California before becoming a Senator</li>
 <li>She supports a Green New Deal and legalizing Marajuana</li>
 <li>She is polling at 8%, the 3rd highest Democratic Poller</li>
@@ -68,7 +68,7 @@ Illegal Guns". He supports Universal Background Checks and banning guns in schoo
 other candidates debt relif plans, but does agree that college is expensive "for many" and supports the expansion of the Public Service Loan Forgivness program, which relives some college<br>
 debt, in exchange for public service. One of his other strong positions is he is in favor of abololishing the Electoral College. 
 </p>
-<ul class = "list">Quick Facts
+<ul class = "list">Quick Facts:
 <li>Mayor of South Bend Indiana since 2012</li>
 <li>Polling with 8%, tied with Kamala Harris</li>
 <li>Sturggles with support from African Americans,
@@ -83,7 +83,7 @@ centers and the "militarization" of ICE. He has even stated that he is in favor 
 the area. Beto is also very strong on Gun Control, he was one of the Congressman to sit-in in the House after the 2016 Pulse Nightclub Shooting. He supports the ban of some semi-automatic<br>
 weapons, and supports some magazine size restrictions, and Universal Background Checks. He hasn't spoken on Education, or tution-free College, and Universal Day Care. 
 </p>
-<ul class = "list">Quick Facts
+<ul class = "list">Quick Facts:
 <li>Former El Paso, Texas Congressman. He ran against Ted Cruz for the Texas Senate Seat, which gained National Attention.</li>
 <li>Polling at 4%</li>
 <li>Announced his launch in Vanity Fair</li>
@@ -99,7 +99,7 @@ would remove the section of ICE that deals with arrests and deportations and ref
 out against loopholes in the process that have allowed people such as Dylann Roof to buy guns before their background checks have been processed and cleared. One of his signiture policies is<br>
 Universal Pre-K programs around the US. 
 </p>
-<ul class = "list">
+<ul class = "list">Quick Facts: 
 <li>Youngest member of the Obama Cabinet, as Secretary of Housing and Urban Development</li>
 <li>He is a low poller, at just below 1%</li>
 <li>He has a twin brother who is a Congressman.</li>
@@ -117,8 +117,8 @@ Universal Pre-K programs around the US.
   <li><a href = "https://www.pbs.org/newshour/politics/what-does-joe-biden-believe-where-the-candidate-stands-on-8-issues">Joe Biden</a> , <a href = "https://www.politico.com/2020-election/candidates-views-on-the-issues/elizabeth-warren/">Elizabeth Warren</a> , <a href = "https://www.pbs.org/newshour/politics/what-does-kamala-harris-believe-where-the-candidate-stands-on-9-issues">Kamala Harris</a> , <a href = "https://www.elle.com/culture/movies-tv/a27073125/julian-castro-presidential-election-2020-issues/">Julian Castro</a> , <a href = "https://www.axios.com/pete-buttigieg-2020-presidential-election-factsheet-indiana-mayor-020c5afc-c8a2-4691-940c-b271e63306b1.html">Pete Buttigeg</a></li>
     </ul>
   </section>
-  </center>
+  
   </div>
 <script src="/script.js" defer></script>
-  </body>
+    </center> </body>
 </html>
