--- a/topics.html
+++ b/topics.html
@@ -43,7 +43,7 @@
       <h2 id = "eductionT">
         Education 
         </h2>
-      <p>
+      <p id = "educationPara">
         
         </p>
       
