--- a/candidates.html
+++ b/candidates.html
@@ -40,13 +40,13 @@ She is a big supporter of Universal Education and has introduced a plan to Congr
 Democrats, such as Bernie Sanders have proposed for a complete wipe-out of all student debt. She has suggested implementing a "Wealth Tax" for millionaries.<br>
 This tax would be used to fund free or lowcost childcare. </p>
 <ul class = "list">Quick Facts:
-<li>Seneator from Massechuets for 6 years</li>
+<li>Senator from Massachussets for 6 years</li>
 <li>Polling with 6%</li>
-<li>Supports legalized Marajuana</li>
+<li>Supports legalized Marijuana</li>
 </ul>
 </section>
 <section class = "person" id = "kamalaHarris">
-<h2>Kamala Harris</h2>
+<h2 id="kaname">Kamala Harris</h2>
 <p>
 Kamala Harris, like all Democratic Canidates, supports the Pathway to Citezenship but she is the only candidate that has promised for it to happen through an <br>
 executive order. She says that with DACA she would take away age restrictions, and implant protections that help Dreamers apply for green cards, and Citezenship. <br>
@@ -56,14 +56,14 @@ of high-capacity magazines, which are guns that can fire 10 or more rounds witho
 </p>
 <ul class = "list">Quick Facts:
 <li>She was the Attorney General of California before becoming a Senator</li>
-<li>She supports a Green New Deal and legalizing Marajuana</li>
+<li>She supports a Green New Deal and legalizing Marijuana</li>
 <li>She is polling at 8%, the 3rd highest Democratic Poller</li>
 </ul>
 </section>
 <section class = "person" id = "peteBooty">
-  <h2>Pete Buttigeg</h2>
+  <h2> Pete Buttigeg</h2>
 <p>
-Pete Buttigeg, supports the Pathway to Citezenship, and supports a path for Undocummented Immigrants, who work, pay taxes and help grow our economy. He is a memeber of the "Mayors against<br>
+Pete Buttigeg, supports the Pathway to Citizenship, and supports a path for Undocummented Immigrants, who work, pay taxes and help grow our economy. He is a memeber of the "Mayors against<br>
 Illegal Guns". He supports Universal Background Checks and banning guns in schools. Unlike other candidates he has not spoken on banning assault weapons. He has not spoken in support of <br>
 other candidates debt relif plans, but does agree that college is expensive "for many" and supports the expansion of the Public Service Loan Forgivness program, which relives some college<br>
 debt, in exchange for public service. One of his other strong positions is he is in favor of abololishing the Electoral College. 
